--- a/ui/common/scss/style.scss
+++ b/ui/common/scss/style.scss
@@ -1,8 +1,240 @@
+@import "normalize";
+@import "main";
+@import "lib";
+
+html, body {background: $body-bg;font-family: $font-noto;}
 .header {
-	position: relative;
-	background: #ffa509;
-	color: #fff;
-	.shareWrap {
-		position: absolute;
-	}
+  position: relative;
+  background: $h-bg;
+  color: #fff;
+  .h1 {
+    display: inline-block;
+    font-size: 1.462rem;
+    font-weight: 300;
+  }
+  .btn {
+    display: inline-block;
+  }
+  .optionWrap {
+    position: absolute;
+    height: 100%;
+    right: 0;
+    top: 0;
+  }
+}
+.main {
+  > header {
+    background: #0ec4bf;
+    color: #fff;
+  }
+  .h1 {
+    margin: 0;
+    padding: 8px 10px;
+    font-size: 1.231rem;
+    font-weight: 100;
+    line-height: 27px;
+  }
+  .h2 {
+    margin: 0;
+    padding: 8px 0;
+    font-size: 1.308rem;
+    line-height: 1.45em;
+    color: #616161;
+    &.bold {
+      color: #000;
+    }
+  }
+  .info-building {
+    >.box {
+      position: relative;
+    }
+    figure {
+      position: absolute;
+      left: 15px;
+      top: 15px;
+      display: inline-block;
+      width: 120px;
+      height: 120px;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    ul {
+      display: block;
+      margin-left: 135px;
+      li {
+        color: #000;
+        font-weight: 400;
+        &.address {
+          color: #333;
+          font-weight: 200;
+          margin-bottom: 5px;
+          padding-bottom: 5px;
+          border-bottom: 1px solid #eee;
+        }
+      }
+    }
+  }
+  .info-agent {
+    figure {
+      position: relative;
+      display: inline-block;
+      width: 100px;
+      height: 100px;
+      border: 1px solid #808080;
+      figcaption {
+        display: block;
+        line-height: 24px;
+        background: #0ec4bf;
+        text-align: center;
+        .label-safe {
+          width: 62px;
+        }
+      }
+    }
+
+    .top {
+      ul {
+        display: inline-block;
+        vertical-align: top;
+        margin-left: 8px;
+      }
+    }
+
+    .bottom {
+      h3 {
+        padding: 7px 4px;
+        margin: 8px 0;
+        border-top: 1px solid #f6f6f6;
+        border-bottom: 1px solid #f6f6f6;
+      }
+    }
+  }
+}
+.footer {
+  .box-gray {
+    margin: 10px;
+    font-size: 0.9231rem;
+    font-weight: 100;
+    strong {
+      font-weight: 400;
+    }
+  }
+  .box-call {
+    display: block;
+    @include background('/img/footer-call.jpg', #fff, center top, $size:contain);
+    border-top: 1px solid #e4e4e4;
+    height: 80px;
+    overflow: hidden;
+    * {
+      @extend .visuallyhidden;
+    }
+
+  }
+}
+
+.article {
+  padding: 0 10px;
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.label-safe {
+  $color: #0ec4bf;
+  display: inline-block;
+  width: 78px;
+  @include background('/img/label-safe.png', $color, $position: center);
+  font-size: 0;
+  color: $color;
+  vertical-align: middle;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.box {
+  padding: 15px;
+}
+.box-white {
+  background: #fff;
+  border: 1px solid #e4e4e4;
+}
+.box-gray {
+  background: #848484;
+  color: #fff;
+}
+.dl-table {
+  $dt-bg: #fafafa;
+  position: relative;
+  margin: 0;
+  overflow: hidden;
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 35%;
+    height: 100%;
+    background: $dt-bg;
+  }
+  &+.dl-table {
+    border-top: 1px solid #eee;
+  }
+  dt,dd {
+    position: relative;
+    float: left;
+    margin: 0;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+  dt {
+    width: 35%;
+    background: $dt-bg;
+    clear: left;
+    color: #6a6a6a;
+  }
+  dd {
+    width: 65%;
+    background: #fff;
+    em {
+      font-size: 1.308rem;
+    }
+  }
+  &.price {
+    .float {
+      position: absolute;
+      right: 15px;
+      top: 15px;
+      width: 100px;
+      height: 49px;
+      padding: 0;
+      button {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        @include background('/img/price-float.jpg');
+        color: transparent;
+        font-size: 0;
+      }
+    }
+  }
+}
+
+
+
+.carousel-wrap {
+  @extend .clearfix;
+  overflow: hidden;
+  .carousel-wrap-items {
+    position: relative;
+    width: 100%;
+  }
+  .item {
+    float: left;
+    max-width: 100vw;
+    overflow: hidden;
+  }
 }
