--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,21 +19,27 @@ html, body {background: $body-bg;font-family: $font-noto;}
     text-overflow: ellipsis;
   }
   .btn {
-    width: 35px;
-    height: 35px;
-    background: #eee;
-
+    width: 25px;
+    height: 25px;
     &.btn-back {
       position: absolute;
-      left: 7px;
-      top: 7px;
+      left: 10px;
+      top: 12px;
+      @include background('/img/icon-back.png', $position: center);
     }
   }
   .optionWrap {
     position: absolute;
     height: 100%;
-    right: 7px;
-    top: 7px;
+    right: 10px;
+    top: 12px;
+    .btn-share {
+      @include background('/img/icon-share.png', $position: center);
+    }
+    .btn-favorite {
+      margin-left: 20px;
+      @include background('/img/icon-favorite.png', $position: center);
+    }
   }
 }
 .main {
@@ -96,12 +102,17 @@ html, body {background: $body-bg;font-family: $font-noto;}
       display: inline-block;
       width: 100px;
       height: 100px;
+      background: #0ec4bf;
       border: 1px solid #808080;
       figcaption {
         display: block;
         line-height: 24px;
         background: #0ec4bf;
         text-align: center;
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+
         .label-safe {
           width: 62px;
         }
@@ -169,9 +180,14 @@ html, body {background: $body-bg;font-family: $font-noto;}
   white-space: nowrap;
 }
 
+#map {
+  width: 100%;
+  height: 237.5px;
+}
 .box {
   padding: 15px;
 }
+
 .box-white {
   background: #fff;
   border: 1px solid #e4e4e4;
@@ -241,6 +257,8 @@ html, body {background: $body-bg;font-family: $font-noto;}
 
 .carousel-wrap {
   @extend .clearfix;
+  position: relative;
+  text-align: center;
   overflow: hidden;
   .carousel-wrap-items {
     position: relative;
@@ -248,7 +266,49 @@ html, body {background: $body-bg;font-family: $font-noto;}
   }
   .item {
     float: left;
-    max-width: 100vw;
     overflow: hidden;
+    >img {
+      min-width: 100vw;
+    }
+  }
+  .carousel-controller {
+    .btn-prev, .btn-next {
+      position: absolute;
+      top: 50%;
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      background: #eee;
+      span {
+        @extend .visuallyhidden;
+      }
+    }
+    .btn-prev {
+      left: 0;
+    }
+    .btn-next {
+      right: 0;
+    }
+  }
+  .carousel-wrap-dots {
+    position:absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    .dot {
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      background: #eee;
+      border-radius: 50%;
+      margin: 5px;
+      
+      &.active {
+        background: #ffa509;
+      }
+      span{
+       @extend .visuallyhidden;
+      }
+    }
   }
 }
